--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <style>
+.scrollbar-custom::-webkit-scrollbar {
+  height: 1px;
+  width: 8px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background-color: #ffedd5;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #ea580c;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #f36f28;
+}
+
+    </style>
     <title>PassOP</title>
   </head>
   <body>
