Updated App components with new features and bug fixes

--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <style>
-.scrollbar-custom::-webkit-scrollbar {
-  height: 1px;
-  width: 8px;
-}
 
-.scrollbar-custom::-webkit-scrollbar-track {
-  background-color: #ffedd5;
-}
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link rel="icon" href="assets/favicon.png" />
 
-.scrollbar-custom::-webkit-scrollbar-thumb {
-  background-color: #ea580c;
-}
+  <style>
+    .scrollbar-custom::-webkit-scrollbar {
+      height: 1px;
+      width: 8px;
+    }
 
-.scrollbar-custom::-webkit-scrollbar-thumb:hover {
-  background-color: #f36f28;
-}
+    .scrollbar-custom::-webkit-scrollbar-track {
+      background-color: #ffedd5;
+    }
 
-    </style>
-    <title>PassUP</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    .scrollbar-custom::-webkit-scrollbar-thumb {
+      background-color: #ea580c;
+    }
+
+    .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+      background-color: #f36f28;
+    }
+  </style>
+  <title>PassUP</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="https://cdn.lordicon.com/lordicon.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
